Closed Bug 94153 Opened 24 years ago Closed 24 years ago

memory/resource leak of arenaLock in plarena.c

Categories

(NSPR :: NSPR, defect, P2)

4.1.2
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jeff, Assigned: wtc)

References

Details

(Keywords: memory-leak, Whiteboard: Possible patch included in text)

Attachments

(1 file)

in nsprpub/lib/ds/plarena.c there is a static lock variable "arenaLock" that is never destroyed. consider adding the following to the bottom of PL_ArenaFinish(): if (arenaLock) { PR_DestroyLock(arenaLock); arenaLock = NULL; }
Marking NEW. Thanks for the patch.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: mlk, patch, review
Whiteboard: Possible patch included in text
Fix checked in on the tip of NSPR.
Status: NEW → RESOLVED
Closed: 24 years ago
OS: Windows 2000 → All
Priority: -- → P2
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → 4.2
Blocks: 129902
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: