Bugzilla bug 94153: destroys the arena lock in PL_ArenaFinish.  Also don't need to hold the lock when destroying the arenas on the arena freelist. The patch to destroy the arena lock was contributed by jeff@NerdOne.com.